--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "mypy>=1.15.0",
+    "pre-commit>=4.2.0",
     "ruff>=0.11.9",
 ]
 
