--- a/mypy.ini
+++ b/mypy.ini
@@ -3,7 +3,7 @@ python_version = 3.11
 ignore_missing_imports = true
 strict = true
 
-[.frameworks.fastapi.*]
+[.frameworks.fastapi_boilerplate.*]
 strict = true
 
 [mypy-src/package2/*]
