--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,7 +11,7 @@
 /frameworks/django/           @tarangsomani @deejhaGKMIT  @dheeraj-gkmit @aditsonigkm
 
 # FastAPI code owned by this group
-/frameworks/fastapi/          @aditsonigkm @deejhaGKMIT  @rithvikkannagkm @nabagkmit @priyanshu-gkm
+/frameworks/fastapi_boilerplate/          @aditsonigkm @deejhaGKMIT  @rithvikkannagkm @nabagkmit @priyanshu-gkm
 
 # Flask code owned by this group
 /frameworks/flask/            @deejhaGKMIT  @aditsonigkm
