--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,18 @@ dependencies = [
     "mypy>=1.15.0",
     "pre-commit>=4.2.0",
     "ruff>=0.11.9",
-    "fastapi-boilerplate"
+    "fastapi-boilerplate",
+    "pydantic>=2.11.4",
 ]
 
 [tool.uv.sources]
 fastapi-boilerplate = { workspace = true }
 
 [tool.uv.workspace]
-members = ["frameworks/fastapi_boilerplate"]
+members = [
+    "frameworks/fastapi_boilerplate",
+ "frameworks/fastapi_crud",
+]
 
 [tool.ruff]
 line-length = 88
